--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyCaZy0jGuAAhTcNmvEROddmoHdC9tRRdz0"></script>
+    <script src=https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=%REACT_APP_GOOGLE_MAPS_API_KEY%"></script>
     <title>React App</title>
 </head>
 
